--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
   </head>
   <body>
+    <h1>p2pweb</h1>
+    see <a href=https://github.com/solsort/p2pweb>github:solsort/p2pweb</a>
     <script src=p2pweb.js></script>
   </body>
 </html>
