p2p-one-hop routing + print console in browser

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <body>
     <h1>p2pweb</h1>
     see <a href=https://github.com/solsort/p2pweb>github:solsort/p2pweb</a>
+    <div id=p2pweb-log>
+    </div>
     <script src=p2pweb.js></script>
   </body>
 </html>
