--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
   </head>
   <body>
-    <h1>p2pweb</h1>
-    see <a href=https://github.com/solsort/p2pweb>github:solsort/p2pweb</a>
-    <div id=p2pweb-log>
-    </div>
-    <script src=p2pweb.js></script>
+    <div id=p2pweb-log></div>
+    <script async src=p2pweb.js></script>
   </body>
 </html>
